--- a/opendxa/CMakeLists.txt
+++ b/opendxa/CMakeLists.txt
@@ -2,71 +2,16 @@ cmake_minimum_required(VERSION 3.12)
 project(DislocationAnalysis VERSION 1.0 LANGUAGES CXX)
 
 option(DXA_BUILD_EXECUTABLE "Build the standalone DXA executable." ON)
+option(DXA_BUILD_PYTHON_BINDINGS "Build Python bindings with pybind11." OFF)
 option(DXA_ENABLE_DEBUG "Enable sanity checks (recommended)." ON)
 option(DXA_USE_OPENMP "Enable OpenMP parallelization if available." ON)
-option(DXA_USE_MKL "Enable Intel MKL acceleration for linear algebra." ON)
+option(DXA_BUILD_TESTS "Build unit tests" OFF)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 message(STATUS "Found Eigen3 version: ${Eigen3_VERSION}")
-
-set(MKL_FOUND FALSE)
-if(DXA_USE_MKL)
-    find_package(MKL QUIET)
-    
-    if(NOT MKL_FOUND)
-        find_package(PkgConfig QUIET)
-        if(PkgConfig_FOUND)
-            pkg_check_modules(MKL QUIET mkl-dynamic-lp64-iomp)
-        endif()
-    endif()
-    
-    if(NOT MKL_FOUND)
-        set(MKL_ROOT_PATHS
-            $ENV{MKLROOT}
-            /opt/intel/mkl
-            /opt/intel/oneapi/mkl/latest
-            /usr/include/mkl
-            /usr/local/include/mkl
-        )
-        
-        find_path(MKL_INCLUDE_DIR mkl.h
-            PATHS ${MKL_ROOT_PATHS}
-            PATH_SUFFIXES include
-        )
-        
-        find_library(MKL_CORE_LIBRARY mkl_core
-            PATHS ${MKL_ROOT_PATHS}
-            PATH_SUFFIXES lib lib/intel64 lib/intel64_lin
-        )
-        
-        find_library(MKL_INTEL_LP64_LIBRARY mkl_intel_lp64
-            PATHS ${MKL_ROOT_PATHS} 
-            PATH_SUFFIXES lib lib/intel64 lib/intel64_lin
-        )
-        
-        find_library(MKL_INTEL_THREAD_LIBRARY mkl_intel_thread
-            PATHS ${MKL_ROOT_PATHS}
-            PATH_SUFFIXES lib lib/intel64 lib/intel64_lin
-        )
-        
-        if(MKL_INCLUDE_DIR AND MKL_CORE_LIBRARY AND MKL_INTEL_LP64_LIBRARY)
-            set(MKL_FOUND TRUE)
-            set(MKL_LIBRARIES ${MKL_INTEL_LP64_LIBRARY} ${MKL_INTEL_THREAD_LIBRARY} ${MKL_CORE_LIBRARY})
-            set(MKL_INCLUDE_DIRS ${MKL_INCLUDE_DIR})
-        endif()
-    endif()
-    
-    if(MKL_FOUND)
-        message(STATUS "Intel MKL found - high-performance linear algebra enabled")
-        message(STATUS "MKL include dir: ${MKL_INCLUDE_DIRS}")
-    else()
-        message(WARNING "Intel MKL not found - using standard BLAS/LAPACK")
-        set(DXA_USE_MKL OFF)
-    endif()
-endif()
 
 if(DXA_USE_OPENMP)
     find_package(OpenMP)
@@ -77,7 +22,17 @@ if(DXA_USE_OPENMP)
     endif()
 endif()
 
-add_library(dxa_core
+if(DXA_BUILD_PYTHON_BINDINGS)
+    find_package(pybind11 QUIET)
+    if(NOT pybind11_FOUND)
+        message(WARNING "pybind11 not found - Python bindings will not be built")
+        set(DXA_BUILD_PYTHON_BINDINGS OFF)
+    else()
+        message(STATUS "pybind11 found - Python bindings enabled")
+    endif()
+endif()
+
+add_library(opendxapy
     src/utils/linalg/LinAlg.cpp
     src/geometry/Smoothing.cpp
     src/geometry/Mesh.cpp
@@ -97,8 +52,7 @@ add_library(dxa_core
     src/core/StackingFaults.cpp
 )
 
-# Agregar directorios de include
-target_include_directories(dxa_core 
+target_include_directories(opendxapy 
     PUBLIC 
         ${CMAKE_CURRENT_SOURCE_DIR}/include
     PUBLIC
@@ -107,47 +61,18 @@ target_include_directories(dxa_core
         ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
-target_compile_definitions(dxa_core PUBLIC
+target_compile_definitions(opendxapy PUBLIC
     $<$<BOOL:${DXA_ENABLE_DEBUG}>:DEBUG_DISLOCATIONS>
 )
 
-target_link_libraries(dxa_core PUBLIC Eigen3::Eigen)
-
-if(DXA_USE_MKL AND MKL_FOUND)
-    target_compile_definitions(dxa_core PUBLIC
-        EIGEN_USE_MKL_ALL
-        MKL_LP64
-        DXA_USE_MKL
-    )
-    
-    target_include_directories(dxa_core PUBLIC ${MKL_INCLUDE_DIRS})
-    target_link_libraries(dxa_core PUBLIC ${MKL_LIBRARIES})
-    
-    target_compile_options(dxa_core PUBLIC
-        $<$<CXX_COMPILER_ID:GNU>:-m64 -fopenmp>
-        $<$<CXX_COMPILER_ID:Intel>:-mkl=parallel>
-        $<$<CXX_COMPILER_ID:Clang>:-m64>
-    )
-    
-    if(UNIX AND NOT APPLE)
-        target_link_libraries(dxa_core PUBLIC pthread dl m)
-    endif()
-else()
-    target_compile_definitions(dxa_core PUBLIC
-        EIGEN_DONT_PARALLELIZE
-    )
-endif()
+target_link_libraries(opendxapy PUBLIC Eigen3::Eigen)
 
 if(DXA_USE_OPENMP AND OpenMP_CXX_FOUND)
-    target_link_libraries(dxa_core PUBLIC OpenMP::OpenMP_CXX)
-    target_compile_definitions(dxa_core PUBLIC DXA_USE_OPENMP)
-    
-    if(NOT (DXA_USE_MKL AND MKL_FOUND))
-        target_compile_definitions(dxa_core PUBLIC EIGEN_USE_THREADS)
-    endif()
+    target_link_libraries(opendxapy PUBLIC OpenMP::OpenMP_CXX)
+    target_compile_definitions(opendxapy PUBLIC DXA_USE_OPENMP)
 endif()
 
-target_compile_options(dxa_core PRIVATE
+target_compile_options(opendxapy PRIVATE
     $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -O3 -march=native -ffast-math>
     $<$<CXX_COMPILER_ID:Clang>:-Wall -Wextra -O3 -march=native -ffast-math>
     $<$<CXX_COMPILER_ID:Intel>:-Wall -O3 -xHost -fp-model fast=2>
@@ -165,7 +90,7 @@ if(DXA_BUILD_EXECUTABLE)
     )
 
     target_link_libraries(opendxa PRIVATE 
-        dxa_core 
+        opendxapy 
         OpenGL::GLU
     )
     
@@ -177,21 +102,34 @@ if(DXA_BUILD_EXECUTABLE)
     )
 endif()
 
-message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
-message(STATUS "C++ standard: ${CMAKE_CXX_STANDARD}")
-message(STATUS "Build executable: ${DXA_BUILD_EXECUTABLE}")
-message(STATUS "Debug mode: ${DXA_ENABLE_DEBUG}")
-message(STATUS "OpenMP support: ${DXA_USE_OPENMP}")
-if(DXA_USE_OPENMP AND OpenMP_CXX_FOUND)
-    message(STATUS "OpenMP version: ${OpenMP_CXX_VERSION}")
-endif()
-message(STATUS "Eigen3 version: ${Eigen3_VERSION}")
-message(STATUS "Intel MKL support: ${DXA_USE_MKL}")
-if(DXA_USE_MKL AND MKL_FOUND)
-    message(STATUS "MKL libraries: ${MKL_LIBRARIES}")
+if(DXA_BUILD_PYTHON_BINDINGS AND pybind11_FOUND)
+    find_package(OpenGL REQUIRED)
+    message(STATUS "OpenGL found for Python bindings")
+
+    pybind11_add_module(opendxa_py
+        ${CMAKE_CURRENT_SOURCE_DIR}/../bindings/python/PyBindModule.cpp
+    )
+
+    target_link_libraries(opendxa_py PRIVATE 
+        opendxapy 
+        OpenGL::GL
+        OpenGL::GLU
+    )
+    
+    target_compile_definitions(opendxa_py PRIVATE 
+        VERSION_INFO="${PROJECT_VERSION}"
+    )
+    
+    set_target_properties(opendxa_py PROPERTIES
+        OUTPUT_NAME "opendxa"
+        PREFIX "${PYTHON_MODULE_PREFIX}"
+        SUFFIX "${PYTHON_MODULE_EXTENSION}"
+    )
+    
+    message(STATUS "Python bindings target 'opendxa_py' configured")
 endif()
 
-install(TARGETS dxa_core
+install(TARGETS opendxapy
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
     RUNTIME DESTINATION bin
@@ -203,8 +141,23 @@ if(DXA_BUILD_EXECUTABLE)
     )
 endif()
 
-option(DXA_BUILD_TESTS "Build unit tests" OFF)
-if(DXA_BUILD_TESTS)
-    enable_testing()
-    message(STATUS "Unit tests enabled")
+if(DXA_BUILD_PYTHON_BINDINGS AND pybind11_FOUND)
+    install(TARGETS opendxa_py
+        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
+    )
+endif()
+
+message(STATUS "=== Build Configuration Summary ===")
+message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+message(STATUS "C++ standard: ${CMAKE_CXX_STANDARD}")
+message(STATUS "Build executable: ${DXA_BUILD_EXECUTABLE}")
+message(STATUS "Build Python bindings: ${DXA_BUILD_PYTHON_BINDINGS}")
+message(STATUS "Debug mode: ${DXA_ENABLE_DEBUG}")
+message(STATUS "OpenMP support: ${DXA_USE_OPENMP}")
+if(DXA_USE_OPENMP AND OpenMP_CXX_FOUND)
+    message(STATUS "OpenMP version: ${OpenMP_CXX_VERSION}")
+endif()
+message(STATUS "Eigen3 version: ${Eigen3_VERSION}")
+if(DXA_BUILD_PYTHON_BINDINGS)
+    message(STATUS "pybind11 found: ${pybind11_FOUND}")
 endif()
