--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+data/
+
 node_modules
 dist
 dist-ssr
 *.local
+*.vtk
 
 # Editor directories and files
 .vscode/*
