--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
-    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/postprocessing": "^2.19.1",
+    "@types/three": "^0.177.0",
     "axios": "^1.9.0",
     "postprocessing": "^6.37.3",
     "react": "^18.2.0",
@@ -20,7 +21,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
-    "three": "^0.152.2"
+    "three": "^0.157.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
