--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.19.1",
     "@types/three": "^0.177.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "axios": "^1.9.0",
     "monaco-editor": "^0.52.2",
     "postprocessing": "^6.37.3",
@@ -23,8 +25,11 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-xtermjs": "^1.0.10",
     "three": "^0.157.0",
-    "vite-plugin-monaco-editor": "^1.1.0"
+    "vite-plugin-monaco-editor": "^1.1.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
