feat: polyhedral_template_matchin.cpp to find neighbors using PTM instead of CNA

--- a/opendxa/CMakeLists.txt
+++ b/opendxa/CMakeLists.txt
@@ -81,16 +81,19 @@ file(GLOB PTM_SOURCES
     "${PTM_LIB_DIR}/ptm_alloy_types.cpp"
     "${PTM_LIB_DIR}/ptm_canonical_coloured.cpp"
     "${PTM_LIB_DIR}/ptm_convex_hull_incremental.cpp"
+    "${PTM_LIB_DIR}/ptm_correspondences.cpp"
     "${PTM_LIB_DIR}/ptm_deformation_gradient.cpp"
     "${PTM_LIB_DIR}/ptm_graph_data.cpp"
     "${PTM_LIB_DIR}/ptm_graph_tools.cpp"
     "${PTM_LIB_DIR}/ptm_index.cpp"
     "${PTM_LIB_DIR}/ptm_initialize_data.cpp"
+    "${PTM_LIB_DIR}/ptm_map_templates.cpp" 
     "${PTM_LIB_DIR}/ptm_multishell.cpp"
     "${PTM_LIB_DIR}/ptm_neighbour_ordering.cpp"
     "${PTM_LIB_DIR}/ptm_normalize_vertices.cpp"
     "${PTM_LIB_DIR}/ptm_polar.cpp"
     "${PTM_LIB_DIR}/ptm_quat.cpp"
+    "${PTM_LIB_DIR}/ptm_solid_angles.cpp" 
     "${PTM_LIB_DIR}/ptm_structure_matcher.cpp"
     "${PTM_LIB_DIR}/ptm_voronoi_cell.cpp"
 )
