refactor(structure-analysis): CNA-related logic and structure initialization

--- a/opendxa/CMakeLists.txt
+++ b/opendxa/CMakeLists.txt
@@ -74,6 +74,7 @@ set(CORE_SOURCES
     src/core/particle_property.cpp
     src/core/lammps_parser.cpp
     src/core/dislocation_analysis.cpp
+    src/core/coordination_structures.cpp
 )
 
 set(STRUCTURES_SOURCES
