--- a/opendxa/dependencies/CMakeLists.txt
+++ b/opendxa/dependencies/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Set position independent code for all dependencies
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 ADD_SUBDIRECTORY(ptm)
 
 # Geogram is used for DelaunayTessellation
