chore(deps): using a modified version of Geogram, including only the Delaunay tessellation.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,12 @@ dislocations.json
 
 __pycache__
 
-opendxa/dependencies/
-!opendxa/ptm
+/opendxa/dependencies/*
+
+!/opendxa/dependencies/ptm/
+!/opendxa/dependencies/ptm/**
+!/opendxa/dependencies/geogram/
+!/opendxa/dependencies/geogram/**
 
 # Logs
 logs
