feat(bindings): analysis result when running .compute in Python

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ __pycache__
 !/opendxa/dependencies/ptm/**
 !/opendxa/dependencies/geogram/
 !/opendxa/dependencies/geogram/**
+debug-data/
 
 # Logs
 logs
