feat: WASM module to read the ZSTD compression performed by the server and load/preload and render the data generated by OpenDXA incredibly quickly.

--- a/opendxa/CMakeLists.txt
+++ b/opendxa/CMakeLists.txt
@@ -73,16 +73,6 @@ find_package(OpenMP REQUIRED)
 find_package(TBB REQUIRED)
 find_package(spdlog REQUIRED)
 
-find_package(ZSTD QUIET CONFIG)
-
-if(NOT ZSTD_FOUND)
-    message(STATUS "ZSTD config-package not found; falling back to pkg-config")
-    find_package(PkgConfig REQUIRED)
-
-    pkg_check_modules(ZSTD REQUIRED IMPORTED_TARGET libzstd)
-    add_library(ZSTD::libzstd ALIAS PkgConfig::ZSTD)
-endif()
-
 message(STATUS "Eigen3 include: ${EIGEN3_INCLUDE_DIR}")
 message(STATUS "nlohmann_json: ${nlohmann_json_SOURCE_DIR}")
 
@@ -141,7 +131,6 @@ target_link_libraries(opendxa_lib PUBLIC
     TBB::tbb
     OpenMP::OpenMP_CXX
     spdlog::spdlog
-    ZSTD::libzstd
 )
 
 # CLI executable
@@ -156,7 +145,6 @@ target_compile_definitions(opendxa PRIVATE
 target_link_libraries(opendxa PRIVATE
     opendxa_lib
     spdlog::spdlog
-    ZSTD::libzstd
     OpenMP::OpenMP_CXX
 )
 
@@ -165,7 +153,6 @@ pybind11_add_module(opendxa._core
     ${BINDINGS_ROOT}/src/main.cpp
     ${BINDINGS_ROOT}/src/bindings/module.cpp
     ${BINDINGS_ROOT}/src/bindings/python_sink.cpp
-    ${BINDINGS_ROOT}/src/bindings/compression.cpp
     ${BINDINGS_ROOT}/src/bindings/dislocation_analysis.cpp
     ${BINDINGS_ROOT}/src/wrappers/dislocation_analysis.cpp
 )
@@ -176,7 +163,7 @@ set_target_properties(opendxa._core PROPERTIES
     LINK_FLAGS_RELEASE "${LINKER_FAST}"
 )
 
-target_link_libraries(opendxa._core PRIVATE opendxa_lib spdlog::spdlog ZSTD::libzstd)
+target_link_libraries(opendxa._core PRIVATE opendxa_lib spdlog::spdlog)
 target_compile_options(opendxa._core PRIVATE
     $<$<CONFIG:Release>:${RELEASE_CXX_OPTS}>
 )
