--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@foxglove/wasm-lz4": "^1.0.2",
+    "@foxglove/wasm-zstd": "^1.0.1",
+    "@hpcc-js/wasm-zstd": "^1.3.2",
     "@monaco-editor/react": "^4.7.0",
+    "@oneidentity/zstd-js": "^1.0.3",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.19.1",
@@ -18,6 +22,9 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "axios": "^1.9.0",
+    "clarinet": "^0.12.6",
+    "fflate": "^0.8.2",
+    "json-stream-parser": "^1.3.0",
     "monaco-editor": "^0.52.2",
     "postprocessing": "^6.37.3",
     "react": "^18.2.0",
@@ -29,10 +36,12 @@
     "three": "^0.157.0",
     "vite-plugin-monaco-editor": "^1.1.0",
     "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
+    "xterm-addon-fit": "^0.8.0",
+    "zstd-codec": "^0.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@rollup/plugin-commonjs": "^28.0.6",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
