--- a/node-server/package.json
+++ b/node-server/package.json
@@ -1,9 +1,10 @@
 {
-  "type": "module",
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
     "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "i": "^0.3.7",
     "npm": "^11.4.2",
     "ts-node": "^10.9.2"
@@ -11,9 +12,13 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "compression": "^1.8.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "mongoose": "^8.16.3"
+    "joi": "^17.13.3",
+    "mongoose": "^8.16.3",
+    "multer": "^2.0.1",
+    "uuid": "^11.1.0"
   }
 }
