--- a/node-server/package.json
+++ b/node-server/package.json
@@ -10,6 +10,7 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "@mongodb-js/zstd": "^2.0.1",
     "body-parser": "^2.2.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
